--- a/HolyLand.lpi
+++ b/HolyLand.lpi
@@ -101,23 +101,23 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="6">
       <Unit0>
         <Filename Value="HolyLand.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="mainunit.pas"/>
+        <Filename Value="hlmainform.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="MainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="MainUnit"/>
+        <UnitName Value="HLMainForm"/>
       </Unit1>
       <Unit2>
-        <Filename Value="appunit.pas"/>
+        <Filename Value="hlapp.pas"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="AppUnit"/>
+        <UnitName Value="HLApp"/>
       </Unit2>
       <Unit3>
         <Filename Value="uscaledpi.pas"/>
@@ -129,6 +129,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="HLUtils"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="hlform.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="HLForm"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
