--- a/HolyLand.lpi
+++ b/HolyLand.lpi
@@ -107,7 +107,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="6">
+    <Units Count="8">
       <Unit0>
         <Filename Value="HolyLand.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -140,6 +140,22 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="HLForm"/>
       </Unit5>
+      <Unit6>
+        <Filename Value="hlnotepad.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Notepad"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="HLNotepad"/>
+      </Unit6>
+      <Unit7>
+        <Filename Value="hlabout.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="About"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="HLAbout"/>
+      </Unit7>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
